--- a/LogoYa/nbproject/project.properties
+++ b/LogoYa/nbproject/project.properties
@@ -26,8 +26,11 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
-    ${libs.javaee-endorsed-api-7.0.classpath}
+    ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.0-5.5.23.jar=lib\\commons-fileupload-1.0-5.5.23.jar
+file.reference.commons-fileupload-1.3.2.jar=lib\\commons-fileupload-1.3.2.jar
+file.reference.org.apache.commons.io-2.4.jar=lib\\org.apache.commons.io-2.4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,15 +45,18 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.commons-fileupload-1.0-5.5.23.jar}:\
+    ${file.reference.org.apache.commons.io-2.4.jar}:\
+    ${file.reference.commons-fileupload-1.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -69,6 +75,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
